--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,19 @@
         android:theme="@style/Theme.FlagQuiz"
         tools:targetApi="31">
         <activity
+            android:name=".ResultActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/NoActionBarTheme">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".QuizQuestionsActivity"
             android:exported="false"
             android:screenOrientation="portrait"
-            >
+            android:theme="@style/Theme.FlagQuiz">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -24,6 +33,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:fitsSystemWindows="true"
             android:screenOrientation="portrait"
             android:theme="@style/NoActionBarTheme"
             android:windowSoftInputMode="adjustResize">
